# VSFastBuild

./: .gitignore  LICENSE  README.md  ReleaseNotes.txt  VSFastBuild.sln
Options/: OptionsPage.cs
Tests/: CMakeLists.txt  fbuild.bff  main.cpp  test.cpp  test.sln  test.vcxproj  tests.sln
Tests/FastBuildCall/: FastBuildCall.csproj  FastBuildCall.sln  Program.cs
Tests/test0/: CMakeLists.txt  test0.cpp  test0.vcxproj  test0.vcxproj.filters  test00.cpp  test01.cpp
Tests/test1/: CMakeLists.txt  pch.h  sample.ispc  sample2.ispc  test1.cpp  test1.h  test1.vcxproj  test1.vcxproj.filters
Tests/test2/: CMakeLists.txt  Resource.h  resource.rc  test2.cpp  test2.vcxproj  test2.vcxproj.filters  vectorAdd.cu  vectorMul.cu
Tests2/: CMakeLists.txt
Tests2/test0/: test0.cpp
Tests2/test1/: test1.cpp
Tests2/test2/: test2.rc
Tests3/: CMakeLists.txt
Tests3/test0/: CMakeLists.txt  test0.h
Tests3/test1/: CMakeLists.txt
Tests3/test2/: CMakeLists.txt  test2.aps  test2.cpp
VSFastBuildCLI/: Program.cs  VSFastBuildCLI.csproj  packages.config
VSFastBuildCLI/Properties/: AssemblyInfo.cs  launchSettings.json
VSFastBuildCommon/: MurmurHash3.cs  SystemEnvironment.cs  TLogTracker.cs  VSEnvironment.cs  VSFastBuild.cs  VSFastBuildCommon.projitems  VSFastBuildCommon.shproj  Version.cs
VSFastBuildVSIX/: GettingStartedGuide.txt  Log.cs  ProjectTypes.cs  ReleaseNotes.txt  VSCommandTable.cs  VSCommandTable.vsct  VSFastBuildVSIX.csproj  VSFastBuildVSIXPackage.cs  source.extension.cs  source.extension.vsixmanifest
VSFastBuildVSIX/Commands/: ComandBFF.cs  CommandBFFFiles.cs  CommandBuildProject.cs  CommandBuildSolution.cs  CommandClean.cs  CommandGenerateSolution.cs  CommandOpenMonitor.cs  CommandReload.cs  MenuBFF.cs
VSFastBuildVSIX/Options/: OptionsPage.cs
VSFastBuildVSIX/Properties/: AssemblyInfo.cs
VSFastBuildVSIX/Resources/: Icon.xcf  Images.Designer.cs  Images.resx  race_flag.xcf
VSFastBuildVSIX/ToolWindows/: BuildEvent.cs  BuildHost.cs  CPUCore.cs  GIFImage.cs  HitTest.cs  OutputFilterItem.cs  SystemPerformanceGraphsCanvas.cs  TextUtils.cs  Timebar.cs  ToolImages.cs  ToolWindowMonitor.cs  ToolWindowMonitorControl.xaml  ToolWindowMonitorControl.xaml.cs
